--- a/.classpath
+++ b/.classpath
@@ -26,5 +26,6 @@
 	<classpathentry kind="lib" path="lib/hamcrest-core-1.3.jar"/>
 	<classpathentry kind="lib" path="lib/junit-4.12.jar"/>
 	<classpathentry kind="lib" path="lib/guava-21.0.jar"/>
+	<classpathentry kind="lib" path="lib/jackson-core-2.8.6.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
