--- a/.classpath
+++ b/.classpath
@@ -27,5 +27,11 @@
 	<classpathentry kind="lib" path="lib/junit-4.12.jar"/>
 	<classpathentry kind="lib" path="lib/guava-21.0.jar"/>
 	<classpathentry kind="lib" path="lib/jackson-core-2.8.6.jar"/>
+	<classpathentry kind="lib" path="lib/jackson-annotations-2.8.6.jar"/>
+	<classpathentry kind="lib" path="lib/jackson-databind-2.8.6.jar"/>
+	<classpathentry kind="lib" path="lib/controlsfx-8.40.12.jar"/>
+	<classpathentry kind="lib" path="lib/testfx-core-4.0.5-alpha.jar"/>
+	<classpathentry kind="lib" path="lib/testfx-junit-4.0.5-alpha.jar"/>
+	<classpathentry kind="lib" path="lib/testFx-3.1.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
